// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Issue Agent Session List Command - Help Text 1`] = `
"stdout:
"Usage: issue agent-session list [options] [issueId]

List agent sessions for an issue

Options:
  -j, --json         Output as JSON
  --status <status>  Filter by session status (choices: "pending", "active",
                     "complete", "awaitingInput", "error", "stale")
  -h, --help         display help for command
"
stderr:
"""
`;

exports[`Issue Agent Session List Command - With Mock Sessions 1`] = `
"stdout:
"STATUS        AGENT            CREATED    SUMMARY
active        Linear Assistant 2026-03-20 Investigating auth token refresh bug
complete      Linear Assistant 2026-03-19 Added dark mode toggle to settings...
"
stderr:
"""
`;

exports[`Issue Agent Session List Command - No Sessions Found 1`] = `
"stdout:
"No agent sessions found for this issue.
"
stderr:
"""
`;

exports[`Issue Agent Session List Command - JSON Output 1`] = `
"stdout:
"{
  "nodes": [
    {
      "agentSession": {
        "id": "session-1",
        "status": "active",
        "createdAt": "2026-03-20T10:00:00.000Z",
        "startedAt": "2026-03-20T10:00:05.000Z",
        "endedAt": null,
        "summary": "Investigating auth token refresh bug",
        "creator": {
          "name": "Alice"
        },
        "appUser": {
          "name": "Linear Assistant"
        }
      }
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
"
stderr:
"""
`;
